# Exposure_Read-Across

./: .gitignore  Home_Page.py  LICENSE  README.md  application_write_up_v1.0_kap.docx  application_write_up_v1.2.docx  pyproject.toml  requirements.txt  webpage_welcome.py
Streamlit app/Official version/: webpage_script.py  webpage_script_requirements.txt
Streamlit app/Official_version/: webpage_script.py
Streamlit app/Unit tests/: test_streamlit_app_unit_tests.py
Streamlit_methods/: __init__.py  analog_methods.py  chem_input.py  cpdat_container.py  modeled_info.py  pages_shared_content.py  reported_figures.py
data/: NHANES_inferences.csv  cdr2020_ccd_api_hits_4-30-2024.parq  cdr_mi_plus_dtxsids.parq
pages/: 1_New_Chemical.py  Analog_Information_Included.py  Chemical_Exposure_Information_Search.py  Chemical_Exposure_Read_Across.py  Existing_Chemical.py  New_Chemical.py
src/Streamlit_methods/: README.md
src/Streamlit_methods/Streamlit_methods/: __init__.py  analog_methods.py  analog_pull.py  chem_input.py  cpdat_container.py  modeled_info.py  osha_display.py  pages_shared_content.py  usis_display.py
tests/: 4-Nitroaniline-NN.parq  chem_info.parq  nitrofen-NN.parq  one-Chloro-4-nitrobenzene-NN.parq.parq  shah-morgan-fp.parq  test_streamlit_app_unit_tests.py
