[project]
name = "Streamlit_methods"
version = "0.1.0"
description = "Research project and package for perfoming exposure-based read across."
authors = [
    {name = "Samuel Van Amberg",email="vanamberg.samuel@epa.gov"},
    {name = "kaphillips",email = "phillips.katherine@epa.gov"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdkit (>=2024.9.5,<2025.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.42.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "ctx-python (>=0.0.1a7,<0.0.2)",
    "streamlit-ketcher (>=0.0.1,<0.0.2)",
]

[tool.setuptools]
py-modules = []
